2008-09-02  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix mod_proxy configuration example
	* doc/guide.html: Likewise

2008-09-02  Mickael Remond  <mremond@process-one.net>

	* src/odbc/mssql2000.sql: Script for MSSQL 2000
	* src/odbc/mssql2005.sql: Script for MSSQL 2005 (EJAB-535)
	* src/odbc/mssql.sql: removed

2008-08-27  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: send last published events now
	supports PEP events from unavailable users nodes (EJAB-698)
	* src/ejabberd_c2s.erl: Likewise

2008-08-26  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.2.txt: Update for final release

	* doc/guide.tex: Windows binary installer requires MSVC++ 5
	* doc/guide.html: Likewise

2008-08-26  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: get_items bugfix (EJAB-716)

2008-08-25  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_privacy_odbc.erl: Prevent case_clause error when
	ejabber_odbc:sql_query returns {error, Reason}
	* src/mod_vcard_odbc.erl: Likewise
	* src/mod_last_odbc.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise

2008-08-25  Badlop  <badlop@process-one.net>

	* src/ejabberd_check.erl: Detect correctly MSSQL and ODBC
	configuration (EJAB-710)

2008-08-24  Geoff Cant  <gcant@process-one.net>

	* src/mod_mud/mod_muc_room.erl: is_visitor/2 fix - use get_role
	not get_affiliation

2008-08-22  Badlop  <badlop@process-one.net>

	* src/ejabberd_router.erl: Fix call to mnesia match_object

2008-08-21  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix names of chatroom to room, user to occupant
	* doc/guide.html: Likewise

2008-08-18  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_log.erl: MUC log files options: plaintext
	format; filename with only room name (EJAB-596)
	* doc/guide.tex: Document both options
	* doc/guide.html: Likewise

	* src/mod_register.erl: Change password using mod_register always